// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileShiftStatsRow > renders correctly with order 1`] = `
"<div data-v-01044dff="" class="stats-row-container">
  <div data-v-01044dff="" class="d-flex mt-1 align-start stats-row-scroll">
    <shift-view-oee-block-stub data-v-01044dff="" labelclass="" valueclass="text-body-medium font-weight-medium" compact="true" expanded="false" class="slot"></shift-view-oee-block-stub>
    <shift-view-shift-quantity-block-stub data-v-01044dff="" loading="false" compact="true" valueclass="text-body-medium font-weight-medium" targetclass="" large="false" class="slot"></shift-view-shift-quantity-block-stub>
    <div data-v-01044dff="" class="slot"><span data-v-01044dff="" class="shift-view-label">Batch quantity</span>
      <batch-quantity-amount-stub data-v-01044dff="" showgoodqty="true" batch="[object Object]" textclass="text-body-medium font-weight-medium text-truncate max-width-100" showprogress="true"></batch-quantity-amount-stub>
    </div>
    <div data-v-01044dff="" class="slot">
      <div data-v-01044dff="" class="shift-view-label">Order</div>
      <div data-v-01044dff="" class="text-body-medium font-weight-medium text-truncate max-width-100">12345</div>
    </div>
    <div data-v-01044dff="" class="slot">
      <div data-v-01044dff="" class="shift-view-label">Product</div>
      <div data-v-01044dff="" class="text-body-medium font-weight-medium text-truncate max-width-100">SKU-123 test product</div>
    </div>
  </div>
</div>"
`;

exports[`MobileShiftStatsRow > renders correctly without order 1`] = `
"<div data-v-01044dff="" class="stats-row-container">
  <div data-v-01044dff="" class="d-flex mt-1 align-start stats-row-scroll">
    <shift-view-oee-block-stub data-v-01044dff="" labelclass="" valueclass="text-body-medium font-weight-medium" compact="true" expanded="false" class="slot"></shift-view-oee-block-stub>
    <shift-view-shift-quantity-block-stub data-v-01044dff="" loading="false" compact="true" valueclass="text-body-medium font-weight-medium" targetclass="" large="false" class="slot"></shift-view-shift-quantity-block-stub>
    <div data-v-01044dff="" class="slot"><span data-v-01044dff="" class="shift-view-label">Batch quantity</span>
      <batch-quantity-amount-stub data-v-01044dff="" showgoodqty="true" batch="[object Object]" textclass="text-body-medium font-weight-medium text-truncate max-width-100" showprogress="true"></batch-quantity-amount-stub>
    </div>
    <!--v-if-->
    <div data-v-01044dff="" class="slot">
      <div data-v-01044dff="" class="shift-view-label">Product</div>
      <div data-v-01044dff="" class="text-body-medium font-weight-medium text-truncate max-width-100">SKU-123 test product</div>
    </div>
  </div>
</div>"
`;
